--- a/demo/ui-showcase.html
+++ b/demo/ui-showcase.html
@@ -6,7 +6,7 @@
     <title>UI Showcase - Square Corner Styling - First Baptist Church Fenton</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family+Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cardo:ital,wght@0,400;0,700;1,400&family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../design-system/css/variables.css">
     <link rel="stylesheet" href="../design-system/css/reset.css">
     <link rel="stylesheet" href="../design-system/css/typography.css">
